Add forwarder message type config